Fixed not responsive title on pages

--- a/frontend/src/pages/Exercises/Exercises.module.css
+++ b/frontend/src/pages/Exercises/Exercises.module.css
@@ -8,6 +8,7 @@
 
 .exercisesTitle{
     text-align: center;
+    word-break: break-all;
 }
 
 .exercisesHeader{
