--- a/frontend/src/pages/Workouts/Workouts.module.css
+++ b/frontend/src/pages/Workouts/Workouts.module.css
@@ -12,6 +12,7 @@
 
 .workoutsTitle{
     text-align: center;
+    word-break: break-all;
 }
 
 .workoutsHeader{
